--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -1,2 +1,16 @@
-add_subdirectory(private)
-add_subdirectory(public)
+add_executable(${PROJECT_NAME}
+    engine.cpp
+)
+
+set_target_properties(${PROJECT_NAME}
+    PROPERTIES
+    FOLDER "${GAMEENGINE_FOLDER_NAME}"
+)
+
+add_subdirectory(core)
+
+target_link_libraries(${PROJECT_NAME}
+    glad    
+    glfw
+    core
+)
