Various things and my opengl code I wrote with the help of learnopengl Also, shader and program classes

--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -6,11 +6,14 @@ set_target_properties(${PROJECT_NAME}
     PROPERTIES
     FOLDER "${GAMEENGINE_FOLDER_NAME}"
 )
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 add_subdirectory(core)
+add_subdirectory(shaders)
 
 target_link_libraries(${PROJECT_NAME}
     glad    
     glfw
     core
+    shaders
 )
