--- a/glad/CMakeLists.txt
+++ b/glad/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
-project(glad C)
+project(glad CXX)
 
 add_library(${PROJECT_NAME})
 target_sources(${PROJECT_NAME}
