--- a/stb/CMakeLists.txt
+++ b/stb/CMakeLists.txt
@@ -11,6 +11,7 @@ target_sources(${PROJECT_NAME}
 set_target_properties(${PROJECT_NAME}
     PROPERTIES
     FOLDER "stb"
+    LINKER_LANGUAGE CXX
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
