Terrible code, probably bugs, still learning from learnopengl Added a wrapper for stb so that it's not possible to forget the macro A lot of new code in math

--- a/engine/source/core/private/CMakeLists.txt
+++ b/engine/source/core/private/CMakeLists.txt
@@ -1,4 +1,7 @@
 set(SOURCE_FILES 
+    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector2.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector3.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/math/vector4.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix2.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix3.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix4.cpp"
