--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(BUILD_SHARED_LIBS OFF)
 
-set(GAMEENGINE_FOLDER_NAME "GameEngine")
+set(GAMEENGINE_FOLDER_NAME "Engine")
 
 set(GLFW_BUILD_EXAMPLES CACHE BOOL OFF)
 set(GLFW_BUILD_TESTS CACHE BOOL OFF)
