--- a/engine/source/shaders/private/CMakeLists.txt
+++ b/engine/source/shaders/private/CMakeLists.txt
@@ -1,7 +1,6 @@
-set(SOURCE_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp"
+set(SOURCE_FILES ${SOURCE_FILES}
+    "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/exceptions.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/program.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp"
+    PARENT_SCOPE
 )
-
-target_sources(${PROJECT_NAME} PRIVATE ${SOURCE_FILES})
