--- a/engine/source/core/public/CMakeLists.txt
+++ b/engine/source/core/public/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(HEADER_FILES
+set(HEADER_FILES ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/math/math.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix2.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/matrix3.hpp"
@@ -8,8 +8,8 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/math/vector3.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/vector4.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/transform.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/camera.hpp"
+    PARENT_SCOPE
 )
 
-target_sources(${PROJECT_NAME} PRIVATE ${HEADER_FILES})
-source_group("public\\math" FILES ${HEADER_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
