--- a/engine/source/shaders/public/CMakeLists.txt
+++ b/engine/source/shaders/public/CMakeLists.txt
@@ -1,8 +1,8 @@
-set(HEADER_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/shader.hpp"
+set(HEADER_FILES ${HEADER_FILES}
+    "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/exceptions.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/program.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/shader.hpp"
+    PARENT_SCOPE
 )
 
-target_sources(${PROJECT_NAME} PRIVATE ${HEADER_FILES})
 target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
