--- a/engine/source/shaders/private/CMakeLists.txt
+++ b/engine/source/shaders/private/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(SOURCE_FILES ${SOURCE_FILES}
+set(SOURCE_FILES 
+    ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/exceptions.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp"
