--- a/engine/source/core/public/CMakeLists.txt
+++ b/engine/source/core/public/CMakeLists.txt
@@ -10,6 +10,7 @@ set(HEADER_FILES ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/math/transform.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/camera.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/color.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/debug_macros.hpp"
     PARENT_SCOPE
 )
 
