--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SOURCE_FILES 
     ${SOURCE_FILES}
-
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/model.cpp"
     PARENT_SCOPE
 )
