--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,14 @@ set(GAMEENGINE_FOLDER_NAME "Engine")
 set(GLFW_BUILD_EXAMPLES CACHE BOOL OFF)
 set(GLFW_BUILD_TESTS CACHE BOOL OFF)
 set(GLFW_INSTALL CACHE BOOL OFF)
+set(ASSIMP_BUILD_TESTS OFF)
+set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
 
 find_package(OpenGL REQUIRED)
 add_subdirectory(glad)
 add_subdirectory(glfw)
 add_subdirectory(stb)
+add_subdirectory(assimp)
 add_subdirectory(engine)
 
 # Compiler flags
