--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -5,6 +5,8 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/spotlight.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/model.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer.hpp"
     PARENT_SCOPE
 )
