--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -2,6 +2,8 @@ set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/model.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer.cpp"
     PARENT_SCOPE
 )
