--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -8,6 +8,8 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/renderer/uniform_buffer.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/renderer/buffers.hpp"
     PARENT_SCOPE
 )
 
