--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -5,5 +5,6 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/renderer/uniform_buffer.cpp"
     PARENT_SCOPE
 )
