Components, game object, object

--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -2,6 +2,10 @@ set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/model.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/object.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/game_object.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/base_component.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/directional_light_component.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer.cpp"
