Essentially everything Doesn't realy work yet Inefficient Terrible cache misses I'm so bad at writing game engines

--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -5,9 +5,14 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/object.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/game_object.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/base_component.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/directional_light_component.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/static_mesh_component.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/renderable_component.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/renderer/renderer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/framebuffer_construct_info.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/uniform_buffer.cpp"
