--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -12,6 +12,7 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/components/base_component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/object_manager.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/guid.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
