--- a/engine/source/engine/private/CMakeLists.txt
+++ b/engine/source/engine/private/CMakeLists.txt
@@ -11,6 +11,8 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/components/renderable_component.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/guid.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/input/input_core.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/input/input.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer/renderer.cpp"
