--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -13,6 +13,10 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/object_manager.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/guid.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/key.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/input/input_core.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/input/axis_action_names.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/input/input.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
