Simplified source grouping #advanced_cmake

--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -18,24 +18,11 @@ add_subdirectory(shaders/private)
 add_subdirectory(engine/public)
 add_subdirectory(engine/private)
 
-function(source_groups_from_paths root_path)
-    foreach(file IN ITEMS ${ARGN})
-        if (IS_ABSOLUTE "${file}")
-            file(RELATIVE_PATH file_relative "${root_path}" "${file}")
-        else()
-            set(file_relative "${file}")
-        endif()
-        get_filename_component(file_path "${file_relative}" PATH)
-        string(REPLACE "/" "\\" file_path "${file_path}")
-        source_group("${file_path}" FILES "${file}")
-    endforeach()
-endfunction(source_groups_from_paths)
-
 target_sources(${PROJECT_NAME} 
     PRIVATE ${SOURCE_FILES} 
     PRIVATE ${HEADER_FILES}
 )
-source_groups_from_paths("${CMAKE_CURRENT_SOURCE_DIR}" ${SOURCE_FILES} ${HEADER_FILES})
+source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${SOURCE_FILES} ${HEADER_FILES})
 
 target_link_libraries(${PROJECT_NAME}
     glad    
