--- a/engine/source/core/private/CMakeLists.txt
+++ b/engine/source/core/private/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE_FILES ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/math/quaternion.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/transform.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/math/math.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/utils/path.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/color.cpp"
     PARENT_SCOPE
 )
