Mouse input, proper input smoothing, scale, input namespace

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -1,8 +1,8 @@
-[axis]
-mouse_x=mouse_x
-mouse_y=mouse_y
-move_forward=w
-move_sideways=d
-move_vertical=e
-
-[action]
+<axis axis="mouse_x" key="mouse_x" scale="0.05">
+<axis axis="mouse_y" key="mouse_y" scale="0.05">
+<axis axis="move_forward" key="w" scale="5">
+<axis axis="move_forward" key="s" scale="-5">
+<axis axis="move_sideways" key="d" scale="5">
+<axis axis="move_sideways" key="a" scale="-5">
+<axis axis="move_vertical" key="e" scale="5">
+<axis axis="move_vertical" key="q" scale="-5">
