Shader manager, slightly reworked renderer

--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(${PROJECT_NAME}
     main.cpp
     engine.cpp
     engine.hpp
+    subsystem_forward_declarations.hpp
 )
 
 set(SOURCE_FILES)
