--- a/engine/source/shaders/private/CMakeLists.txt
+++ b/engine/source/shaders/private/CMakeLists.txt
@@ -3,5 +3,6 @@ set(SOURCE_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/exceptions.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/shader_manager.cpp"
     PARENT_SCOPE
 )
