--- a/engine/source/shaders/public/CMakeLists.txt
+++ b/engine/source/shaders/public/CMakeLists.txt
@@ -3,6 +3,7 @@ set(HEADER_FILES
     "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/exceptions.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/shader_manager.hpp"
     PARENT_SCOPE
 )
 
