Reworked value smoothing, added sensitivity

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -1,14 +1,14 @@
-<axis axis="mouse_x" key="mouse_x" scale="0.05">
-<axis axis="mouse_y" key="mouse_y" scale="0.05">
-<axis axis="mouse_x" key="gamepad_right_stick_x_axis" scale="1">
-<axis axis="mouse_y" key="gamepad_right_stick_y_axis" scale="-1">
-<axis axis="move_forward" key="w" scale="5">
-<axis axis="move_forward" key="s" scale="-5">
-<axis axis="move_sideways" key="d" scale="5">
-<axis axis="move_sideways" key="a" scale="-5">
-<axis axis="move_vertical" key="e" scale="5">
-<axis axis="move_vertical" key="q" scale="-5">
-<axis axis="move_forward" key="gamepad_left_stick_y_axis" scale="-0.5">
-<axis axis="move_sideways" key="gamepad_left_stick_x_axis" scale="0.5">
-<axis axis="move_vertical" key="gamepad_right_trigger" scale="0.5">
-<axis axis="move_vertical" key="gamepad_left_trigger" scale="-0.5">
+<axis axis="mouse_x" key="mouse_x" scale="1" sensitivity="0.05">
+<axis axis="mouse_y" key="mouse_y" scale="1" sensitivity="0.05">
+<axis axis="mouse_x" key="gamepad_right_stick_x_axis" scale="1" sensitivity="1">
+<axis axis="mouse_y" key="gamepad_right_stick_y_axis" scale="-1" sensitivity="1">
+<axis axis="move_forward" key="w" scale="5" sensitivity="1">
+<axis axis="move_forward" key="s" scale="-5" sensitivity="1">
+<axis axis="move_sideways" key="d" scale="5" sensitivity="1">
+<axis axis="move_sideways" key="a" scale="-5" sensitivity="1">
+<axis axis="move_vertical" key="e" scale="5" sensitivity="1">
+<axis axis="move_vertical" key="q" scale="-5" sensitivity="1">
+<axis axis="move_forward" key="gamepad_left_stick_y_axis" scale="-1" sensitivity="0.5">
+<axis axis="move_sideways" key="gamepad_left_stick_x_axis" scale="1" sensitivity="0.5">
+<axis axis="move_vertical" key="gamepad_right_trigger" scale="1" sensitivity="0.5">
+<axis axis="move_vertical" key="gamepad_left_trigger" scale="-1" sensitivity="0.5">
