Replaced enum for axes/actions names with strings

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -2,6 +2,7 @@
 <axis axis="mouse_y" key="mouse_y" scale="1" sensitivity="0.05">
 <axis axis="mouse_x" key="gamepad_right_stick_x_axis" scale="1" sensitivity="1">
 <axis axis="mouse_y" key="gamepad_right_stick_y_axis" scale="-1" sensitivity="1">
+<axis axis="scroll" key="mouse_scroll" scale="1" sensitivity="1">
 <axis axis="move_forward" key="w" scale="5" sensitivity="1">
 <axis axis="move_forward" key="s" scale="-5" sensitivity="1">
 <axis axis="move_sideways" key="d" scale="5" sensitivity="1">
