Added something that works as if it were proper shader reloading but it isn't and it's a mess

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -13,3 +13,5 @@
 <axis axis="move_sideways" key="gamepad_left_stick_x_axis" scale="1" sensitivity="0.5">
 <axis axis="move_vertical" key="gamepad_right_trigger" scale="1" sensitivity="0.5">
 <axis axis="move_vertical" key="gamepad_left_trigger" scale="-1" sensitivity="0.5">
+
+<axis axis="reload_shaders" key="r" scale="1" sensitivity="1">
