--- a/engine/source/scripts/CMakeLists.txt
+++ b/engine/source/scripts/CMakeLists.txt
@@ -1,12 +1,14 @@
 set(HEADER_FILES
     ${HEADER_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/camera_movement.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/debug_hotkeys.hpp"
     PARENT_SCOPE
 )
 
 set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/camera_movement.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/debug_hotkeys.cpp"
     PARENT_SCOPE
 )
 
