--- a/engine/source/shaders/private/CMakeLists.txt
+++ b/engine/source/shaders/private/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(SOURCE_FILES 
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/shaderfile.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/exceptions.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/shader_exceptions.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/shader_manager.cpp"
     PARENT_SCOPE
