Single directional light shadow mapping

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -15,3 +15,4 @@
 <axis axis="move_vertical" key="gamepad_left_trigger" scale="-1" sensitivity="0.5">
 
 <axis axis="reload_shaders" key="r" scale="1" sensitivity="1">
+<axis axis="show_shadow_map" key="t" scale="1" sensitivity="1">
