--- a/engine/source/renderer/private/CMakeLists.txt
+++ b/engine/source/renderer/private/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE_FILES
     ${SOURCE_FILES}
     "${CMAKE_CURRENT_SOURCE_DIR}/renderer.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/framebuffer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/opengl.cpp"
     # "${CMAKE_CURRENT_SOURCE_DIR}/uniform_buffer.cpp"
     PARENT_SCOPE
 )
