Input now supports actions

--- a/data/input_bindings.config
+++ b/data/input_bindings.config
@@ -16,3 +16,6 @@
 
 <axis axis="reload_shaders" key="r" scale="1" sensitivity="1">
 <axis axis="show_shadow_map" key="t" scale="1" sensitivity="1">
+<axis axis="swap_fxaa_shaders" key="y" scale="1" sensitivity="1">
+<action action="move_forward" key="w" sensitivity="1">
+<action action="move_forward" key="s" sensitivity="-1">
