--- a/engine/source/engine/public/CMakeLists.txt
+++ b/engine/source/engine/public/CMakeLists.txt
@@ -1,29 +1,29 @@
-set(HEADER_FILES 
-    ${HEADER_FILES}
-    "${CMAKE_CURRENT_SOURCE_DIR}/object.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/entity.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/entity_manager.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/base_component.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/renderable_component.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/static_mesh_component.hpp"
+set(TEMPLATE_IMPLEMENTATION_FILES
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_container.tpp"
+)
+
+set(HEADER_FILES ${HEADER_FILES} ${TEMPLATE_IMPLEMENTATION_FILES}
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/directional_light_component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/line_component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/point_light_component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/spot_light_component.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/directional_light_component.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/behaviour_component.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/camera.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/components/static_mesh_component.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/components/transform.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/components/component_system.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/assets.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/guid.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/id.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/time.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/key.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_access.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/component_container.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/ecs.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ecs/entity.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/input/input.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/mesh_manager.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/mesh.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh/plane.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/cube.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/assets.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/guid.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/key.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/object.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/time.hpp"
     PARENT_SCOPE
 )
 
